--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -13,7 +13,7 @@ jobs:
       - run: |
           npm install
       - run: |
-          NODE_OPTIONS=--openssl-legacy-provider npm run all
+          npm run all
   test-action:
     runs-on: ubuntu-latest
     steps:
