--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -66,3 +66,19 @@ jobs:
           verilator --version
           yices --version | head -1
           python3 --version
+  test-action-darwin:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./
+      - name: Tool Versions
+        shell: bash
+        run: |
+          yosys --version
+          sby --help | head -1
+          nextpnr-ice40 --version
+          nextpnr-ecp5 --version
+          nextpnr-nexus --version
+          verilator --version
+          yices --version | head -1
+          python --version
