--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -88,13 +88,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
       - name: Tool Versions
-        shell: bash
         run: |
           yosys --version
-          sby --help | head -1
+          sby --help
           nextpnr-ice40 --version
           nextpnr-ecp5 --version
           nextpnr-nexus --version
           verilator --version
-          yices --version | head -1
+          yices --version
           python --version
