--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: Setup OSS CAD Suite
-description: This downloads and sets up a pre-build EDA environment from the YosysHQ OSS CAD Suite, allowing you to have all the most up-to-date tools available to you.
+description: This downloads and sets up a pre-build EDA environment from the YosysHQ OSS CAD Suite.
 author: YosysHQ
 branding:
   color: purple
