--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Tool Versions
         shell: bash
         run: |
@@ -32,6 +34,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           version: '2023-02-10'
       - name: Tool Versions
         shell: bash
@@ -50,6 +53,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           python-override: true
       - name: Tool Versions
         shell: bash
@@ -85,6 +89,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Tool Versions
         run: |
           yosys --version
